Maven surefire not running and failing test and warnings (#294)
* Maven surefire wasn't running and failing test and warnings
* Fix src/test/java/uk/gov/ons/ctp/response/casesvc/state/StateTransitionManagerUnitTest.java
* auto patch increment

---------

Co-authored-by: ras-rm-pr-bot <rasrm.team@ons.gov.uk>